// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addBabelPlugin returns a function that adds a plugin to the plugins list 1`] = `
{
  "module": {
    "rules": [
      {
        "oneOf": [
          {
            "include": "src",
            "loader": "babel",
            "options": {
              "plugins": [
                "@babel/plugin-transform-runtime",
              ],
            },
          },
          {
            "exclude": "src",
            "loader": "babel",
            "options": {},
          },
        ],
      },
    ],
  },
}
`;

exports[`addBabelPlugins returns functions that add plugins to the plugins list 1`] = `
{
  "module": {
    "rules": [
      {
        "oneOf": [
          {
            "include": "src",
            "loader": "babel",
            "options": {
              "plugins": [
                [
                  "@babel/plugin-proposal-object-rest-spread",
                  {
                    "loose": true,
                  },
                ],
                "@babel/plugin-transform-runtime",
              ],
            },
          },
          {
            "exclude": "src",
            "loader": "babel",
            "options": {},
          },
        ],
      },
    ],
  },
}
`;

exports[`addBabelPreset returns a function that adds a preset to the presets list 1`] = `
{
  "module": {
    "rules": [
      {
        "oneOf": [
          {
            "include": "src",
            "loader": "babel",
            "options": {
              "plugins": [],
              "presets": [
                "@babel/env",
              ],
            },
          },
          {
            "exclude": "src",
            "loader": "babel",
            "options": {},
          },
        ],
      },
    ],
  },
}
`;

exports[`addBabelPresets returns functions that add presets to the presets list 1`] = `
{
  "module": {
    "rules": [
      {
        "oneOf": [
          {
            "include": "src",
            "loader": "babel",
            "options": {
              "plugins": [],
              "presets": [
                [
                  "@babel/env",
                  {
                    "loose": true,
                  },
                ],
                "@babel/typescript",
              ],
            },
          },
          {
            "exclude": "src",
            "loader": "babel",
            "options": {},
          },
        ],
      },
    ],
  },
}
`;

exports[`addDecoratorsLegacy returns a function that adds the decorators plugin to the plugins list 1`] = `
{
  "module": {
    "rules": [
      {
        "oneOf": [
          {
            "include": "src",
            "loader": "babel",
            "options": {
              "plugins": [
                [
                  "@babel/plugin-proposal-decorators",
                  {
                    "legacy": true,
                  },
                ],
              ],
            },
          },
          {
            "exclude": "src",
            "loader": "babel",
            "options": {},
          },
        ],
      },
    ],
  },
}
`;

exports[`addExternalBabelPlugin returns a function that adds a plugin to the 'outside of app' babel-loader's plugins list 1`] = `
{
  "module": {
    "rules": [
      {
        "oneOf": [
          {
            "include": "src",
            "loader": "babel",
            "options": {
              "plugins": [],
            },
          },
          {
            "exclude": "src",
            "loader": "babel",
            "options": {
              "plugins": [
                "@babel/plugin-proposal-class-properties",
              ],
            },
          },
        ],
      },
    ],
  },
}
`;

exports[`addExternalBabelPlugins returns functions that add plugins to the 'outside of app' babel-loader's plugins list 1`] = `
{
  "module": {
    "rules": [
      {
        "oneOf": [
          {
            "include": "src",
            "loader": "babel",
            "options": {
              "plugins": [],
            },
          },
          {
            "exclude": "src",
            "loader": "babel",
            "options": {
              "plugins": [
                [
                  "@babel/plugin-proposal-object-rest-spread",
                  {
                    "loose": true,
                  },
                ],
                "@babel/plugin-transform-runtime",
              ],
            },
          },
        ],
      },
    ],
  },
}
`;

exports[`babelExclude sets the babel loader exclude 1`] = `
{
  "module": {
    "rules": [
      {
        "oneOf": [
          {
            "exclude": [
              "fake_directory",
            ],
            "include": "src",
            "loader": "babel",
            "options": {
              "plugins": [],
            },
          },
          {
            "exclude": "src",
            "loader": "babel",
            "options": {},
          },
        ],
      },
    ],
  },
}
`;

exports[`babelInclude sets the babel loader include 1`] = `
{
  "module": {
    "rules": [
      {
        "oneOf": [
          {
            "include": [
              "src",
            ],
            "loader": "babel",
            "options": {
              "plugins": [],
            },
          },
          {
            "exclude": "src",
            "loader": "babel",
            "options": {},
          },
        ],
      },
    ],
  },
}
`;

exports[`fixBabelImports adds the babel imports plugin for the provided library 1`] = `
{
  "module": {
    "rules": [
      {
        "oneOf": [
          {
            "include": "src",
            "loader": "babel",
            "options": {
              "plugins": [
                [
                  "import",
                  {
                    "libraryDirectory": "",
                    "libraryName": "lodash",
                  },
                  "fix-lodash-imports",
                ],
              ],
            },
          },
          {
            "exclude": "src",
            "loader": "babel",
            "options": {},
          },
        ],
      },
    ],
  },
}
`;

exports[`removeInternalBabelPlugin removes a babel plugin with the matching constructor name 1`] = `
{
  "plugins": [],
}
`;

exports[`useBabelRc enables the babel loader's babelrc flag 1`] = `
{
  "module": {
    "rules": [
      {
        "oneOf": [
          {
            "include": "src",
            "loader": "babel",
            "options": {
              "babelrc": true,
              "plugins": [],
            },
          },
          {
            "exclude": "src",
            "loader": "babel",
            "options": {},
          },
        ],
      },
    ],
  },
}
`;
